[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/menus/MenuButton.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/menus/MainMenu.gd" type="Script" id=2]
[ext_resource path="res://scenes/levels/Level1.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/render-beto-01.png" type="Texture" id=4]

[node name="MainMenu" type="Node"]
script = ExtResource( 2 )
firstlevel = ExtResource( 3 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -28.5732
margin_top = -3.1748
margin_right = 867.427
margin_bottom = 476.825
rect_scale = Vector2( 0.56, 0.56 )
texture = ExtResource( 4 )
stretch_mode = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer"]
margin_right = 1024.0
margin_bottom = 300.0
rect_min_size = Vector2( 0, 300 )

[node name="Label" type="Label" parent="VBoxContainer/CenterContainer"]
margin_left = 440.0
margin_top = 143.0
margin_right = 583.0
margin_bottom = 157.0
text = "Beto's Delivery Tower!"

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 304.0
margin_right = 1024.0
margin_bottom = 604.0
rect_min_size = Vector2( 0, 300 )
alignment = 1

[node name="Play" parent="VBoxContainer/VBoxContainer" instance=ExtResource( 1 )]
margin_top = 71.0
margin_bottom = 121.0
focus_neighbour_top = NodePath("../Exit")
focus_neighbour_bottom = NodePath("../Settings")
text = "PLAY"
arrow_margin_from_center = 109

[node name="Settings" parent="VBoxContainer/VBoxContainer" instance=ExtResource( 1 )]
margin_top = 125.0
margin_bottom = 175.0
focus_neighbour_top = NodePath("../Play")
focus_neighbour_bottom = NodePath("../Exit")
text = "FULLSCREEN"
arrow_margin_from_center = 209

[node name="Exit" parent="VBoxContainer/VBoxContainer" instance=ExtResource( 1 )]
margin_top = 179.0
margin_bottom = 229.0
focus_neighbour_top = NodePath("../Settings")
focus_neighbour_bottom = NodePath("../Play")
text = "EXIT"
arrow_margin_from_center = 108
[connection signal="pressed" from="VBoxContainer/VBoxContainer/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer/Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer/Exit" to="." method="_on_Exit_pressed"]
